# virga

./: .gitignore  .travis.yml  1_GettingStarted.ipynb  2_RunningTheCode.ipynb  Eddysed.ipynb  HISTORY.rst  README.rst  calc_mie.py  codecov.yml  condensables.py  gas_properties.py  genindex.html  index.html  init_opt_python3_version.ipynb  installation.html  justdoit.py  justplotit.py  main.py  modules.html  objects.inv  optics.py  pvaps.py  py-modindex.html  pyeddy.py  pyproject.toml  root_functions.py  search.html  searchindex.js  setup.cfg  setup.py  tutorials.html  virga.html
.github/workflows/: ci.yml  pylint.yml
_sources/: index.rst.txt  installation.rst.txt  modules.rst.txt  tutorials.rst.txt
_sources/notebooks/: 11_Fractal_Aggregate_spectra_in_PICASO.ipynb.txt  12_Custom_Fractal_Aggregate_Aerosols.ipynb.txt  1_GettingStarted.ipynb.txt  2_RunningTheCode.ipynb.txt  3_AnalyzingRuns.ipynb.txt  4_PairingOutputToPICASO.ipynb.txt  5_IndexofRefractionFactory.ipynb.txt  6_Variable_fsed.ipynb.txt  8_CustomAerosolLayers.ipynb.txt
_static/: documentation_options.js
docs/: 2_RunningTheCode.ipynb  3_AnalyzingRuns.ipynb  Baseline.ipynb  Computing Fall Speeds in Eddysed.ipynb  Eddysed-Tutorial.ipynb  Makefile  conf.py  index.rst  init_opt_python3_version.ipynb  installation.rst  tutorials.rst  virga.rst
docs/notebooks/: 13_Gamma_Distribution_Example.ipynb  (+19 more)
notebooks/: 10_Fractal_Aggregate_Aerosols_in_a_Hot_Jupiter.html  10_Fractal_Aggregate_Aerosols_in_a_Hot_Jupiter.ipynb  11_Fractal_Aggregate_spectra_in_PICASO.html  11_Fractal_Aggregate_spectra_in_PICASO.ipynb  12_Custom_Fractal_Aggregate_Aerosols.html  12_Custom_Fractal_Aggregate_Aerosols.ipynb  1_GettingStarted.html  1_GettingStarted.ipynb  2_RunningTheCode.html  2_RunningTheCode.ipynb  3_AnalyzingRuns.html  3_AnalyzingRuns.ipynb  3_Kzz_Options.html  3_Kzz_Options.ipynb  4_PairingOutputToPICASO.html  5_IndexofRefractionFactory.html  5_IndexofRefractionFactory.ipynb  5_SwitchingSolver.html  6_Variable_fsed.html  6_Variable_fsed.ipynb  6a_Gamma_Distribution_Example.html  6a_Gamma_Distribution_Example.ipynb  7_SwitchingSolver.html  7_SwitchingSolver.ipynb  8_CustomAerosolLayers.html  8_CustomAerosolLayers.ipynb  9_CustomCloudLayer.html  9_CustomCloudLayer.ipynb  CompareMMRplots.html  CompareMMRplots.ipynb
optics/: CaAl12O19.mieff  CaAl12O19.refrind  CaTiO3.mieff  CaTiO3.refrind
tests/: MnS.mieff  MnS.refrind  MnS_aggregates_Df_2.000000.mieff  SiO2.mieff  test_cloud.py  test_full.py  test_integration.py  test_unit.py  wasp107_data.py
virga/: __init__.py  aggregate_analysis_tools.py  calc_mie.py  cloudy_retrieval.py  compare_plots.py  condensables.py  direct_mmr_solver.py  gas_properties.py  hj.pt  ior_factory.py  justdoit.py  justplotit.py  optics.py  pvaps.py  pyeddy.py  root_functions.py  run_virga.py  virga.py
(+27 files in other folders)
