[metadata]
name = virga
version = dev0.0
summary = exoplanet code for compute cloud structure
description-file = README.md
author = Natasha Batalha at NASA Ames
author-email = natasha.e.batalha@gmail.com
home-page = https://natashabatalha.github.io
url = https://github.com/natashabatalha/virga
; Add this line to the classifier options if your project supports Python 3:
Programming Language :: Python :: 3
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = 
	virga
    
# [install_data]
# pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files

[zest.releaser]
release = no

[backwards_compat]
use_2to3 = True
zip_safe = False
